--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,32 @@
 /.Rproj.user
 /.Rproj.user
 /.Rproj.user
+/.Rproj.user/C22405B2/pcs
+/.Rproj.user/C22405B2
+/.Rproj.user/C22405B2/pcs
+/.Rproj.user
+/.Rproj.user/C22405B2/sources
+/.Rproj.user/C22405B2/sources
+/.Rproj.user
+/.Rproj.user/C22405B2/sources
+/.Rproj.user/C22405B2/sources/per/t
+/.Rproj.user/C22405B2/sources/per/t
+*.tmp
+*.tmp
+GPS_CSV-20230923T045356Z-001/GPS_CSV/CCES_018_GPS_QAQC.png
+GPS_CSV-20230923T045356Z-001/MorroBay Mar 2023/ADRIFT_046_GPS.png
+GPS_CSV-20230923T045356Z-001/GPS_CSV/CCES_018_GPS.png
+/.Rproj.user/C22405B2/sources
+GPS_CSV-20230923T045356Z-001/MorroBay Mar 2023/ADRIFT_050_GPS_QAQC.png
+*.pper
+*.pper
+*.pper
+*.tmp
+/.Rproj.user/C22405B2
+.RData
+.Rproj.user/C22405B2/sources/session-44aaff75/2B104AC2-contents
+*.RData
+*.log
+/GPS_CSV-20230923T045356Z-001
+/.Rproj.user
+/.Rproj.user/C22405B2/sources
