--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ GPS_CSV-20230923T045356Z-001/MorroBay Mar 2023/ADRIFT_050_GPS_QAQC.png
 /GPS_CSV-20230923T045356Z-001
 /.Rproj.user
 /.Rproj.user/C22405B2/sources
+JASEA Express Letter/~$press Letter Template.docx
+/.Rproj.user/C22405B2
+*.pper
+*.pper
